# neardevhub-contract

./: .gitattributes  .gitignore  Cargo.toml  README.md  build.sh  kek.txt  rust-toolchain.toml  rustfmt.toml  test.sh
.devcontainer/: devcontainer.json  post-create.sh
.github/workflows/: main.yml  release.yml
community/: Cargo.toml  build.rs  build.sh
community-factory/: Cargo.toml  build.rs  build.sh
community-factory/src/: lib.rs
community/src/: lib.rs  social_db.rs
devhub_common/: Cargo.toml
devhub_common/src/: lib.rs
discussions/: Cargo.toml  build.sh
discussions/src/: lib.rs
res/: devgovgigs.wasm  near_ideas.wasm
shared/: Cargo.toml  LICENSE  README.md
shared/src/: lib.rs
shared/src/proposal/: mod.rs  timeline.rs
shared/src/rfp/: mod.rs  timeline.rs
src/: changelog.rs  community.rs  debug.rs  lib.rs  migrations.rs  notify.rs  project.rs  proposal.rs  repost.rs  rfp.rs  social_db.rs  stats.rs  str_serializers.rs  table.rs
src/access_control/: members.rs  mod.rs  restricted_labels.rs  rules.rs
src/common/: mod.rs
src/community/: mod.rs
src/post/: attestation.rs  blog.rs  comment.rs  github.rs  idea.rs  like.rs  mod.rs  solution.rs  sponsorship.rs  submission.rs
src/project/: mod.rs
src/proposal/: mod.rs  repost.rs  timeline.rs
src/rfp/: mod.rs  repost.rs  timeline.rs
src/web4/: handler.rs  scroll_comment_into_view.js  types.rs
src/workspace/: mod.rs
tests/: Cargo.toml  README.md  communities.rs  migration.rs  posting.rs  proposals.rs  rfps.rs  test_env.rs  tests.rs  workspaces.rs
tests/communities/: mod.rs
tests/migration/: mod.rs
tests/migration/snapshots/: tests__migration__deploy_contract_self_upgrade-2.snap  tests__migration__deploy_contract_self_upgrade.snap
tests/proposals/: mod.rs
tests/rfps/: mod.rs
tests/snapshots/: migration__deploy_contract_self_upgrade-2.snap  migration__deploy_contract_self_upgrade-3.snap  migration__deploy_contract_self_upgrade-4.snap  migration__deploy_contract_self_upgrade-5.snap  migration__deploy_contract_self_upgrade-5.snap.new  migration__deploy_contract_self_upgrade-6.snap  migration__deploy_contract_self_upgrade-7.snap  migration__deploy_contract_self_upgrade-8.snap  migration__deploy_contract_self_upgrade-8.snap.new  migration__deploy_contract_self_upgrade-9.snap  migration__deploy_contract_self_upgrade.snap  workspaces__deploy_contract_self_upgrade-2.snap  workspaces__deploy_contract_self_upgrade-3.snap  workspaces__deploy_contract_self_upgrade-4.snap  workspaces__deploy_contract_self_upgrade-5.snap  workspaces__deploy_contract_self_upgrade.snap
tests/src/: test.rs
tests/test_env/: mod.rs
