[workspace]
members = ["devhub_common", "discussions", "community", "community-factory"]

[workspace.package]
repository = "https://github.com/NEAR-DevHub/neardevhub-contract"

[workspace.dependencies]
near-sdk = "=5.1.0"
near-contract-standards = "=5.1.0"
devhub_common = { path = "./devhub_common" }
cargo-near-build = "0.1.0"

[package]
name = "devhub"
version = "0.2.0"
authors = ["NEAR DevHub <neardevhub.org>"]
edition = "2021"
repository = "https://github.com/NEAR-DevHub/neardevhub-contract"

[lib]
crate-type = ["cdylib"]

[dependencies]
near-sdk = { workspace = true, features = ["unstable"] }
near-contract-standards.workspace = true
serde_json = { version = "1.0", features = ["preserve_order"] }
devhub_common.workspace = true
html-escape = "0.2.13"

[dev-dependencies]
near-sdk = { workspace = true, features = ["unit-testing"] }
insta = { version = "1.31.0", features = ["json", "redactions"] }
regex = "1"
near-workspaces = { version = "0.10.0", features = ["unstable"], default-features = false  }
cargo-near-build.workspace = true
tokio = { version = "1.10.0", features = ["full"] }
anyhow = "1.0"

# this profile is important as it applies to contract members of workspace: 
# ["discussions", "community", "community-factory"]
[profile.release]
codegen-units = 1
# Tell `rustc` to optimize for small code size.
opt-level = "s"
lto = true
debug = false
panic = "abort"
overflow-checks = true
