[workspace]
members = ["devhub_common", "discussions", "community", "community-factory"]

[workspace.package]
repository = "https://github.com/NEAR-DevHub/neardevhub-contract"

[workspace.dependencies]
near-sdk = "5.5.0"
near-contract-standards = "5.5.0"
devhub_common = { path = "./devhub_common" }
cargo-near-build = "0.1.0"

[package]
name = "devhub"
version = "0.2.0"
authors = ["NEAR DevHub <neardevhub.org>"]
edition = "2021"
repository.workspace = true

[lib]
crate-type = ["cdylib"]

# fields to configure build with WASM reproducibility, according to specs  
# in https://github.com/near/NEPs/blob/master/neps/nep-0330.md 
[package.metadata.near.reproducible_build]
# docker image, descriptor of build environment
image = "sourcescan/cargo-near:0.8.2-rust-1.81.0"
# tag after colon above serves only descriptive purpose; image is identified by digest
image_digest = "sha256:3b5e6efa1d0cef710009f9cc20c845d316187cc170455edc5ba7fdf471c19655"
# build command inside of docker container 
# if docker image from default gallery is used https://hub.docker.com/r/sourcescan/cargo-near/tags,
# the command may be any combination of flags of `cargo-near`,
# supported by respective version of binary inside the container besides `--no-locked` flag
container_build_command = ["cargo", "near", "build"]

[dependencies]
near-sdk = { workspace = true, features = ["unstable"] }
near-contract-standards.workspace = true
serde_json = { version = "1.0", features = ["preserve_order"] }
devhub_common.workspace = true
html-escape = "0.2.13"

[dev-dependencies]
near-sdk = { workspace = true, features = ["unit-testing"] }
insta = { version = "1.31.0", features = ["json", "redactions"] }
regex = "1"
near-workspaces = { version = "0.14.0", features = ["unstable"], default-features = false  }
cargo-near-build.workspace = true
tokio = { version = "1.10.0", features = ["full"] }
anyhow = "1.0"

[patch.crates-io]
near-workspaces = { git = "https://github.com/near/near-workspaces" }

# this profile is important as it applies to contract members of workspace: 
# ["discussions", "community", "community-factory"]
[profile.release]
codegen-units = 1
# Tell `rustc` to optimize for small code size.
opt-level = "s"
lto = true
debug = false
panic = "abort"
overflow-checks = true
