[package]
name = "devhub-community"
version = "0.1.0"
authors = ["NEAR DevHub <neardevhub.org>"]
edition = "2021"
repository.workspace = true

[lib]
crate-type = ["cdylib"]

[dependencies]
near-sdk.workspace = true
devhub_common.workspace = true

[build-dependencies]
cargo-near-build = { workspace = true, features = ["build_script"] }
