[package]
name = "devhub_common"
version = "0.1.0"
edition = "2021"

[dependencies]
near-sdk = { git = "https://github.com/PolyProgrammist/near-sdk-rs", branch = "add-nearschema" }

[profile.release]
codegen-units = 1
# Tell `rustc` to optimize for small code size.
opt-level = "s"
lto = true
debug = false
panic = "abort"
overflow-checks = true