[package]
name = "tests"
version = "0.0.0"
publish = false
edition = "2018"

[dev-dependencies]
anyhow = "1.0"
borsh = "0.10"
maplit = "1.0"
near-units = "0.2.0"
serde = "1.0"
serde_with = "1"
# arbitrary_precision enabled for u128 types that workspaces requires for Balance types
serde_json = { version = "1.0", features = ["arbitrary_precision"] }
tokio = { version = "1.10.0", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3.5", features = ["env-filter"] }
workspaces = "0.7.0"
base64 = "0.13"

[[example]]
name = "devhub"
path = "src/test.rs"